updates for timeseries-db
